--- a/style.css
+++ b/style.css
@@ -2,3 +2,125 @@ body {
   background-color: black;
   color: white;
 }
+
+header a {
+  font-size: 100px;
+  padding: 50px 0;
+  border: none;
+  text-decoration: none;
+  color: white;
+}
+
+header a:hover {
+  color: gray;
+}
+
+ul a {
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  border-bottom: 5px solid white;
+  padding: 10px;
+}
+
+.container {
+  height: 100vh;
+  margin: 0px 100px;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+ul a:hover {
+  border-bottom: 5px solid gray;
+  color: gray;
+}
+
+.info {
+  font-size: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  padding: 100px 0;
+}
+
+.info img {
+  width: 40%;
+  height: 40%;
+  border-radius: 20%;
+  padding-bottom: 80px;
+}
+
+.info p {
+  border-bottom: 1px solid white;
+  padding: 30px 0;
+}
+
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 30px;
+}
+
+.front {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  font-size: 80px;
+  padding-top: 500px;
+}
+
+.front p {
+  padding: 20px 0;
+}
+
+.front p:hover {
+  color: skyblue;
+}
+
+.favorite p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  font-size: 50px;
+}
+
+.favorite p:first-child {
+  padding-top: 80px;
+}
+
+.favorite img {
+  width: 40%;
+  height: 40%;
+  margin-bottom: 80px;
+  border-radius: 40px
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.goal {
+  font-size: 60px;
+  padding-top: 300px;
+  line-height: 2;
+}
