--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ ul a:hover {
 }
 
 .info img {
-  width: 40%;
-  height: 40%;
+  width: 10em;
+  height: 10em;
   border-radius: 20%;
-  padding-bottom: 80px;
+  margin-bottom: 80px;
 }
 
 .info p {
@@ -120,7 +120,7 @@ section {
 }
 
 .goal {
-  font-size: 60px;
+  font-size: 30px;
   padding-top: 300px;
   line-height: 2;
 }
