--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 header a {
-  font-size: 100px;
+  font-size: 80px;
   padding: 50px 0;
   border: none;
   text-decoration: none;
@@ -31,6 +31,8 @@ ul a {
 header {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 nav ul {
@@ -50,14 +52,14 @@ ul a:hover {
   justify-content: flex-start;
   align-items: center;
   height: 100vh;
-  padding: 100px 0;
+  margin-top: 80px;
 }
 
 .info img {
   width: 10em;
   height: 10em;
   border-radius: 20%;
-  margin-bottom: 90px;
+  margin-bottom: 50px;
 }
 
 .info p {
@@ -81,7 +83,7 @@ ul a:hover {
   width: 100%;
   height: 100vh;
   font-size: 80px;
-  padding-top: 500px;
+  margin-top: 300px;
 }
 
 .front p {
